[project]
name = "openatlas"
version = "9.2.0"
description = "An open source database system for handling complex historical and archaeological data"
readme = "README.md"
license = "GPL-2.0-only"
authors = [
    { name = "OpenAtlas Team", email = "info@openatlas.eu" }
]
requires-python = ">=3.13"

[project.urls]
Homepage = "https://openatlas.eu/"
Repository = "https://github.com/craws/OpenAtlas"
Issues = "https://redmine.openatlas.eu/projects/openatlas/issues"
Roadmap = "https://redmine.openatlas.eu/projects/openatlas/roadmap"
Wiki = "https://redmine.openatlas.eu/projects/openatlas/wiki"
Documentation = "https://redmine.openatlas.eu/projects/openatlas/wiki/Technical_Documentation"
"User Manual" = "https://manual.openatlas.eu/"


dependencies = [
    "bcrypt~=4.2.0",
    "beautifulsoup4~=4.13.4",
    "email-validator==2.2.0",
    "flasgger==0.9.7.1",
    "flask==3.1.1",
    "flask-babel==4.0.0",
    "flask-cors==6.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-login==0.6.3",
    "flask-restful==0.3.10",
    "flask-wtf==1.2.2",
    "fuzzywuzzy==0.18.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "lxml~=5.2.2",
    "markdown==3.7",
    "markupsafe==2.1.5",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0",
    "python-gettext==4.0",
    "pyyaml~=6.0.1",
    "rapidfuzz>=3.14.3",
    "rdflib==7.1.1",
    "requests==2.32.3",
    "shapely~=2.1.0",
    "svgwrite~=1.4.3",
    "unidecode~=1.3.8",
    "validators~=0.20.0",
    "wand==0.6.13",
    "werkzeug==3.1.3",
    "wtforms==3.1.2",
    "xmltodict==0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=5.1.0",
    "pytest-cov>=5.0.0",
    "coverage>=7.6.0"
]

